--- a/index.html
+++ b/index.html
@@ -1,23 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weekopdracht - NS-Treinbord</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <div id="container">
         <div id="left">
             <!-- hier komt de klok -->
-             hier is de klok
+            `
+            <div class="klok"></div>
+            <div class="roodPuntje"></div>
+            <div class="wijzer1"></div>
+            <div class="roodPuntje1"></div>
+            <div class="wijzer2"></div>
+            <div class="langeWijzer"></div>
+            <div class="korteWijzer"></div>
+            <div class="nummers"></div>
         </div>
         <div id="middle">
             <!-- Hier komt de reizigers info -->
+             <div class="witteAchtergrond">
+            <div class="nummer1">1</div>
+            <div class="blauweBalk"></div>
+            <div class="blauwStreepje"></div>
+            <div class="blauwStreepje1"></div>
+            <div class="blauwStreepje2"></div>
+            <div class="blauwStreepje3"></div>
+            <div class="blauwStreepje4"></div>
+            <div class="blauwStreepje5"></div>
+            <div class="blauwStreepje6"></div>
+            <div class="blauwStreepje7"></div>
+            <div class="blauwStreepje8"></div>
+            <div class="blauwStreepje9"></div>
+            <div class="blauwStreepje10"></div>
+            <div class="witteStreep1"></div>
+            <div class="witteStreep2"></div>
+            <div class="witteStreep3"></div>
+            <div class="rechterBlok"></div>
+            <div class="blauwBlok  "></div>
+            <div class="Logo"></div>
+            <div class="textOnder">Hierna/next: 08:54 IC Venlo</div>
+            <div class="heerlen">Heerlen</div>
+            <div class="treinText">PONMLK</div>
+            <div class="plaatsen">via 's-Hertogenbosch, Eindhoven,</div>
+            <div class="plaatsen1">Weert, Roermond en Sittard</div>
+            <div class="intercity">Intercity</div>
+            <div class="minuut">minuut</div>
+        </div>
         </div>
         <div id="right">
             <!-- hier komt het spoor nummer -->
+            <div class="witVierkantRechts">
+                <div class="blauwVierkantje">
+                <div class="nummer18">18</div>
+                <div class="letterB">b</div>
+                <div class="Spoor">spoor</div>
+
+            </div>
         </div>
     </div>
 </body>
+
 </html>
